objects/ASI_CRM_WS_Evaluation_Items__c.object
<CustomObject>
    <description>ASI_CRM_WS_Evaluation_Items</description>
    <fields>
        <fullName>ASI_CRM_Achieve_Rate__c</fullName>
        <label>Achieve Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Actual_Value__c</fullName>
        <label>Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Actual_Volume__c</fullName>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Target_Value__c</fullName>
        <label>Target Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_WS_Code__c</fullName>
        <label>WS Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Calculated_Incentive__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Calculated Incentive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_City__c</fullName>
        <formula>ASI_CRM_WS2__r.ASI_CRM_CN_CCity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Data_Quality_Rate__c</fullName>
        <label>Data Quality Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Scan_Rate__c</fullName>
        <label>Scan Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS T2</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>WS Evaluation Items</relationshipLabel>
        <relationshipName>WS_Evaluation_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Code__c</fullName>
        <formula>ASI_CRM_WS2__r.ASI_CRM_CN_CRM_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Evaluation__c</fullName>
        <label>Evaluation ID</label>
        <referenceTo>ASI_CRM_WS_Evaluation__c</referenceTo>
        <relationshipLabel>WS Evaluation Items</relationshipLabel>
        <relationshipName>ASI_CRM_WS_Evaluation_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_GS__c</fullName>
        <label>WS GS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WS Evaluation Items</relationshipLabel>
        <relationshipName>ASI_CRM_WS_Evaluation_Detail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_incentive__c</fullName>
        <label>Incentive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WS Evaluation Items</label>
    <nameField>
        <displayFormat>WSD-{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WS Evaluation Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_WS_Evaluation_Item</fullName>
        <active>true</active>
        <label>ASI CRM CN WS Evaluation Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>